ansible/manifests/cilium-gate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-gate-policy
  labels:
    kubernetes.io/metadata.name: cilium-gate-policy
