ansible/manifests/cilium-gate/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cilium-gate-policy
spec:
  podSelector: {}
  policyTypes: [Ingress]
